# gabriel-main

./: 020424.c  04062024.c  11062024.c  17 07 2024.c  20240529.c  CMakeLists.txt  Circo1.c  README.md  READMELUIZ.md  atividade #1 10 04 2024.c  basquete 08 04 2024.c  exercicio_1.c  exercicio_1_2.c  exercicio_2.c  formas boas de cuidar linhas.c  intervalos de hora.c  media das notas 17072024.c  media.c  media2.c  numeros primos ou nao 23 04 2024.c  operação matematica.c  quintoExercicioDois.c  revovler.c  salario hora.c  stringAula19062024#2.c  stringAula19062024#3.c  stringAula19062024.c  struct.c  tarefa de casa 1.c  tarefa de casa 4.c  tarefa de casa 6.c  testando.c  teste.c  valores if.c
Primeiro Semestre/: 16 04 2024 exercicio.c  17 04 2024 exerc.c  20240319.c  20240529.c  Inventer os digitos.c  Soma 23 04 2024.c  aprovado ou reprovado.c  atividade #2 10 04 2024.c  exercicio_1_2.c  exercicio_2.c  intervalos de hora.c  media.c  primeiroExercicio.c  primeiroExercicioDois.c  quartoExercicio.c  quintoExercicio.c  resolução 4.c  resolução 6.c  segundoExercicioDois.c  sextoExercicio.c  tarefa de casa 1.c  tarefa de casa 2.c  tarefa de casa 3.c  tarefa de casa 4.c  tarefa de casa 5.c  tarefa de casa 6.c
Ruby/: atividade #1 26062024.c
Ruby/Teste/: myprog.rb  untitled.rb
Saves/Memory Card Folder.ps2/: _pcsx2_superblock
Saves/Memory Card Folder.ps2/BASCUS-97328GAMEDATA/: BASCUS-97328GAMEDATA  _pcsx2_index  garage  icon.sys
Saves/Memory Card Folder.ps2/BASLUS-20680HIBob___/: BASLUS-20680HIBob___  SpongeBob00  _pcsx2_index  _pcsx2_meta_directory  icon.sys
Saves/Memory Card Folder.ps2/BASLUS-20680HIBob___/_pcsx2_meta/: BASLUS-20680HIBob___  SpongeBob00  icon.sys
Saves/Memory Card Folder.ps2/BASLUS-20904SBMovie_/: BASLUS-20904SBMovie_  SpongeBobMovie01  _pcsx2_index  _pcsx2_meta_directory  icon.sys
Saves/Memory Card Folder.ps2/BASLUS-20904SBMovie_/_pcsx2_meta/: BASLUS-20904SBMovie_  SpongeBobMovie01  icon.sys
Segundo Semestre/: 1  1.c  18092024.c  2  2.c  24102024  24102024.c  24102024_2  24102024_2.c  3  3.c  4  4.c  5  5.c  6  6.c  7  7.c  8  8.c  Atividade 10.c  Atividade 6.c  Atividade 7.c  Atividade 8.c  Atividade 9.c  Atividade5.c  Calculando perimetros.c  Kazienko  Kazienko.c  Linha.c  pacotes.txt
Segundo Semestre/Prova2/: 1  1.c  2  2.c
TerceiroSemestre/: 1deFevereiro  1deFevereiro.c  Beecrowd  Beecrowd.c  Beecrowd01  Beecrowd01.c  Beecrowd02  Beecrowd02.c
beecrowd/: 1010 calculo simples  1012 - area  1012 - area.c
beecrowd/C/: chaBeeCrowd.c  testing.c
dheinWork/: primeiro.c  quarto.c  quintoExercicio.c  segundo.c  sexto.c  terceiro.c
gabrielLopes/: gabrielLopes.cbp  gabrielLopes.depend
