cmake_minimum_required(VERSION 3.29)
project(gabriel_main C)

set(CMAKE_C_STANDARD 11)

add_executable(gabriel_main
    beecrowd/C/chaBeeCrowd.c
    beecrowd/C/testing.c
    "beecrowd/1012 - area.c"
    dheinWork/primeiro.c
    dheinWork/quarto.c
    dheinWork/quinto.c
    dheinWork/quintoExercicio.c
    dheinWork/segundo.c
    dheinWork/sexto.c
    dheinWork/sextoExercicio.c
    dheinWork/terceiro.c
    gabrielLopes/main.c
    "Primeiro Semestre/020424.c"
    "Primeiro Semestre/04062024.c"
    "Primeiro Semestre/11062024.c"
    "Primeiro Semestre/16 04 2024 exercicio.c"
    "Primeiro Semestre/17 04 2024 exerc.c"
    "Primeiro Semestre/17 07 2024.c"
    "Primeiro Semestre/20240319.c"
    "Primeiro Semestre/20240529.c"
    "Primeiro Semestre/aprovado ou reprovado.c"
    "Primeiro Semestre/atividade #1 10 04 2024.c"
    "Primeiro Semestre/atividade #2 10 04 2024.c"
    "Primeiro Semestre/basquete 08 04 2024.c"
    "Primeiro Semestre/Circo1.c"
    "Primeiro Semestre/exercicio_1.c"
    "Primeiro Semestre/exercicio_1_2.c"
    "Primeiro Semestre/exercicio_2.c"
    "Primeiro Semestre/formas boas de cuidar linhas.c"
    "Primeiro Semestre/intervalos de hora.c"
    "Primeiro Semestre/Inventer os digitos.c"
    "Primeiro Semestre/media das notas 17072024.c"
    "Primeiro Semestre/media.c"
    "Primeiro Semestre/media2.c"
    "Primeiro Semestre/numeros primos ou nao 23 04 2024.c"
    "Primeiro Semestre/operação matematica.c"
    "Primeiro Semestre/primeiroExercicio.c"
    "Primeiro Semestre/primeiroExercicioDois.c"
    "Primeiro Semestre/quartoExercicio.c"
    "Primeiro Semestre/quintoExercicio.c"
    "Primeiro Semestre/quintoExercicioDois.c"
    "Primeiro Semestre/resolução 4.c"
    "Primeiro Semestre/resolução 6.c"
    "Primeiro Semestre/revovler.c"
    "Primeiro Semestre/salario hora.c"
    "Primeiro Semestre/segundoExercicio.c"
    "Primeiro Semestre/segundoExercicioDois.c"
    "Primeiro Semestre/sextoExercicio.c"
    "Primeiro Semestre/Soma 23 04 2024.c"
    "Primeiro Semestre/stringAula19062024#2.c"
    "Primeiro Semestre/stringAula19062024#3.c"
    "Primeiro Semestre/stringAula19062024.c"
    "Primeiro Semestre/struct.c"
    "Primeiro Semestre/tarefa de casa 1.c"
    "Primeiro Semestre/tarefa de casa 2.c"
    "Primeiro Semestre/tarefa de casa 3.c"
    "Primeiro Semestre/tarefa de casa 4.c"
    "Primeiro Semestre/tarefa de casa 5.c"
    "Primeiro Semestre/tarefa de casa 6.c"
    "Primeiro Semestre/terceiroExercicio.c"
    "Primeiro Semestre/testando.c"
    "Primeiro Semestre/teste.c"
    "Primeiro Semestre/valores if.c"
    "Ruby/atividade #1 26062024.c"
    "Segundo Semestre/18092024.c")
